--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -25,8 +25,8 @@
         <p>out of 100</p> 
       </div>
     
-      Great
-      You scored higher than 65% of the people who have taken these tests.
+      <h1 class="grade">Great</h1>
+      <p class="remarks">You scored higher than 65% of the people who have taken these tests.</p>
     </div>
     <div class="rigt-other-scores">
       Summary
