--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -31,19 +31,31 @@
     <div class="rigt-other-scores">
       <h1 class="heading">Summary</h1>
       <div class="other-scores-1">
-        <div class="other-scores-topic">Reaction</div>
+        <div class="other-score-topic">
+          <img src="assets/images/icon-reaction.svg" alt="reaction-image">
+          <div class="other-scores-topic-1">Reaction</div>
+        </div>
         <div class="other-scores-score">80 / 100</div>      
       </div>
       <div class="other-scores-2">
-        <div class="other-scores-topic">Memory</div>
+        <div class="other-score-topic">
+          <img src="assets/images/icon-memory.svg" alt="memory-image">
+          <div class="other-scores-topic-2">Memory</div>
+        </div>
         <div class="other-scores-score">92 / 100</div>         
       </div>
       <div class="other-scores-3">
-        <div class="other-scores-topic">Verbal</div>
+        <div class="other-score-topic">
+          <img src="assets/images/icon-verbal.svg" alt="verbal-image">
+          <div class="other-scores-topic-3">Verbal</div>
+        </div>
         <div class="other-scores-score">61 / 100</div>     
       </div>
       <div class="other-scores-4">
-        <div class="other-scores-topic">Visual</div>
+        <div class="other-score-topic">
+          <img src="assets/images/icon-visual.svg" alt="visual-image">
+          <div class="other-scores-topic-4">Visual</div>
+        </div>
         <div class="other-scores-score">72 / 100</div> 
       </div>
       
