--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -35,28 +35,28 @@
           <img src="assets/images/icon-reaction.svg" alt="reaction-image">
           <div class="other-scores-topic-1">Reaction</div>
         </div>
-        <div class="other-scores-score">80 / 100</div>      
+        <div class="other-scores-score"><b>80</b> / 100</div>      
       </div>
       <div class="other-scores-2">
         <div class="other-score-topic">
           <img src="assets/images/icon-memory.svg" alt="memory-image">
           <div class="other-scores-topic-2">Memory</div>
         </div>
-        <div class="other-scores-score">92 / 100</div>         
+        <div class="other-scores-score"><b>92</b> / 100</div>         
       </div>
       <div class="other-scores-3">
         <div class="other-score-topic">
           <img src="assets/images/icon-verbal.svg" alt="verbal-image">
           <div class="other-scores-topic-3">Verbal</div>
         </div>
-        <div class="other-scores-score">61 / 100</div>     
+        <div class="other-scores-score"><b>61</b> / 100</div>     
       </div>
       <div class="other-scores-4">
         <div class="other-score-topic">
           <img src="assets/images/icon-visual.svg" alt="visual-image">
           <div class="other-scores-topic-4">Visual</div>
         </div>
-        <div class="other-scores-score">72 / 100</div> 
+        <div class="other-scores-score"><b>72</b> / 100</div> 
       </div>
       
       <div class="button">Continue</div>
