--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -8,6 +8,8 @@
   
   <title>Frontend Mentor | Product preview card component</title>
 
+  <link rel="stylesheet" href="style.css">
+
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -16,18 +18,25 @@
 </head>
 <body>
 
-  Preview
+  <div class="container">
+    <div class="left-hand-side">
+      <!-- <img src="images/image-product-desktop.jpg" alt="perfume-image-desktop"> -->
+    </div>
+    <div class="right-hand-side">
+      Perfume
 
-  Gabrielle Essence Eau De Parfum
+      Gabrielle Essence Eau De Parfum
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+      A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+      Perfumer-Creator for the House of CHANEL.
 
-  $149.99
-  
-  $169.99
+      $149.99
+      
+      $169.99
 
-  Add to Cart
+      Add to Cart
+    </div>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
