--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -10,6 +10,10 @@
 
   <link rel="stylesheet" href="style.css">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -23,16 +27,16 @@
       <!-- <img src="images/image-product-desktop.jpg" alt="perfume-image-desktop"> -->
     </div>
     <div class="right-hand-side">
-      Perfume
+      <h3 class="heading">Perfume</h3>
 
-      Gabrielle Essence Eau De Parfum
+      <h1>Gabrielle Essence Eau De Parfum</h1>
 
-      A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-      Perfumer-Creator for the House of CHANEL.
+      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+        Perfumer-Creator for the House of CHANEL.</p>
 
-      $149.99
+      <h3>$149.99</h3>
       
-      $169.99
+      <h3>$169.99</h3>
 
       Add to Cart
     </div>
