--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -29,14 +29,16 @@
     <div class="right-hand-side">
       <h3 class="heading">Perfume</h3>
 
-      <h1>Gabrielle Essence Eau De Parfum</h1>
+      <h1 class="product-name">Gabrielle Essence Eau De Parfum</h1>
 
       <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
         Perfumer-Creator for the House of CHANEL.</p>
 
-      <h3>$149.99</h3>
+      <div class="price">
+        <h1 class="actual-price">$149.99</h1>
       
-      <h3>$169.99</h3>
+        <h3 class="discounter=price">$169.99</h3>
+      </div>
 
       Add to Cart
     </div>
