--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -24,7 +24,10 @@
 
   <div class="container">
     <div class="left-hand-side">
-      <!-- <img src="images/image-product-desktop.jpg" alt="perfume-image-desktop"> -->
+      <picture>
+        <source media="(min-width: 650px)" srcset="./images/image-product-desktop.jpg">
+        <img src="./images/image-product-mobile.jpg" alt="product-image">
+      </picture>
     </div>
     <div class="right-hand-side">
       <h3 class="heading">Perfume</h3>
@@ -40,7 +43,7 @@
         <h3 class="discounter=price">$169.99</h3>
       </div>
 
-      Add to Cart
+      <div class="button">Add To Cart</div>
     </div>
   </div>
   
