--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -26,11 +26,13 @@
   <p>Please let us know how we did with your support request. All feedback is appreciated 
     to help us improve our offering!</p>
 
-  <ul><button class="btn">1</button></ul>
-  <ul><button class="btn">2</button></ul>
-  <ul><button class="btn">3</button></ul>
-  <ul><button class="btn">4</button></ul>
-  <ul><button class="btn">5</button></ul>
+  <ul>
+    <li><button class="btn">1</button></li>
+    <li><button class="btn">2</button></li>
+    <li><button class="btn">3</button></li>
+    <li><button class="btn">4</button></li>
+    <li><button class="btn">5</button></li>
+  </ul>
 
   <button class="btn-submit">Submit</button>
   </div>
