--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -34,16 +34,16 @@
     <li><button class="btn">5</button></li>
   </ul>
 
-  <button class="btn-submit">Submit</button>
+  <button class="btn-submit" id="submit">Submit</button>
   </div>
 
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
 
-  <div class="thank-you">
+  <div class="thank-you hidden">
   <img src="./images/illustration-thank-you.svg" alt="thank-you-image">
-  <p>You selected <!-- Add rating here --> out of 5</p>
+  <p class="grade">You selected <!-- Add rating here --> out of 5</p>
 
   <h2>Thank you!</h2>
 
