--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -43,7 +43,7 @@
 
   <div class="thank-you hidden">
   <img src="./images/illustration-thank-you.svg" alt="thank-you-image">
-  <p class="grade">You selected <!-- Add rating here --> out of 5</p>
+  <p class="grade">You selected <span id ="rating"></span> out of 5</p>
 
   <h2>Thank you!</h2>
 
